<?xml version="1.0"?>
<package format="2">
	<name>chr_mobile_proto</name>
	<version>0.0.0</version>
	<description>The chr_mobile_proto package</description>

	<maintainer email="tas30947@gmail.com">Eiki Obara</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>


	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>

</package>
